force-app/main/default/objects/Certification__c/fields/Inspection__c.field-meta.xml
<CustomField>
    <fullName>Inspection__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Inspection</label>
    <referenceTo>Inspection__c</referenceTo>
    <relationshipLabel>Certifications</relationshipLabel>
    <relationshipName>Certifications</relationshipName>
    <type>Lookup</type>
</CustomField>